--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "front-end-boilerplate",
-  "description" : "a boilerplate for a basic front-end development project",
+  "description": "a boilerplate for a basic front-end development project",
   "version": "1.0.0",
   "keywords": [],
   "author": "Tim Bakkum",
   "license": "MIT",
   "homepage": "http://timbakkum.net",
-
   "engines": {
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.2",
+    "cssnano": "^3.10.0",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "~0.5.2",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-htmlhint": "^0.9.13",
     "grunt-markdown": "^0.7.0",
-    "grunt-postcss": "^0.8.0"
+    "grunt-modernizr": "^1.0.2",
+    "grunt-postcss": "^0.8.0",
+    "modularscale-sass": "^2.1.1"
   }
 }
